--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
     "@vue/cli-plugin-eslint": "^3.5.0",
     "@vue/cli-service": "^3.5.0",
     "babel-eslint": "^10.0.1",
+    "cypress": "^3.3.2",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue-cli-plugin-vuetify": "^0.5.0",
